--- a/public/css/root.css
+++ b/public/css/root.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 * {
     scroll-behavior: smooth;
@@ -12,4 +12,13 @@ body {
     height: 100vh;
     min-height: 100vh;
 
+}
+
+
+.mobile-dashboard-nav {
+    transform: translateX(-500px);
+    transition: .8s;
+}
+.slide {
+    transform: translateX(0px);
 }
