--- a/public/css/root.css
+++ b/public/css/root.css
@@ -4,6 +4,15 @@
     scroll-behavior: smooth;
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+
 body {
     max-width: 100%;
     overflow-x: hidden;
