--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -1,4 +1,8 @@
 /*! Color themes for Google Code Prettify | MIT License | github.com/jmblog/color-themes-for-google-code-prettify */
+body {
+    height: 100%;
+}
+
 .prettyprint {
     background: #202746;
     font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
