--- a/public/css/root.css
+++ b/public/css/root.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import "tailwindcss/components";
 
 * {
     scroll-behavior: smooth;
@@ -93,8 +94,12 @@ body {
   }
 
 
+  #categeryicons > img {
+    height: 20px;
+  }
+
   .navbar {
-    background-color:rgba(247, 247, 247, 0.5);
+
     backdrop-filter: blur(8px);
 
 
@@ -107,4 +112,9 @@ body {
 
   #category-wrapper > img {
     height: 20px;
+  }
+
+
+  ion-icon {
+    font-size: 1.5rem;
   }
