--- a/public/css/iot.css
+++ b/public/css/iot.css
@@ -1,12 +1,21 @@
- body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Rubik+Glitch&display=swap');
+
+body {
     background-image: url('/public/background.jpg')
  }
+
+
+ * {
+    font-family: 'Quantico', sans-serif;
+}
+
  .round-switch {
     position: relative;
     display: inline-block;
     width: 38px;
     height: 21px;
   }
+
   .round-switch input {
     display: none;
   }
@@ -41,3 +50,8 @@
     border-radius: 50%;
   }
 
+
+
+ span.bbaricon:hover{
+    filter: drop-shadow(5px 5px 10px #FFAE09);
+  }
